# hako

./: .gitignore  LICENSE  README.md
client/: .prettierignore  README.md  openapi.json  package-lock.json  package.json  setupTests.ts  svelte.config.js  vite.config.ts
client/src/: app.html  hooks.server.ts
client/src/lib/api/: api.ts  types.d.ts
client/src/lib/components/: ThemeSwitcher.svelte  ThemeSwitcher.test.ts
client/src/lib/shared/components/: TagsList.svelte
client/src/lib/stores/: theme.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/tags/: +page.svelte  +page.ts
server/: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  ruff.toml
server/hako/: api.py  asgi.py  settings.py  urls.py  wsgi.py
server/hako/apps/tags/: models.py  schema.py
server/hako/apps/tags/migrations/: 0001_initial.py
